--- a/css/general.css
+++ b/css/general.css
@@ -56,9 +56,13 @@ html {
 }
 
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 1.8rem;
   line-height: 1;
   font-weight: 400;
   color: #333;
+}
+
+.hidden {
+  display: none;
 }
