--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
 .container {
   display: grid;
   justify-content: center;
-  height: 100vh;
-  align-content: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),
     url(../img/background.jpg);
   background-size: cover;
+  height: 100vh;
+  align-content: center;
 }
 
 .calculator {
-  background-color: #e7f5ff;
+  background-color: #d3f9d8;
   /* border: 1px solid #333; */
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.7);
+  box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.7);
   border-radius: 11px;
+  position: relative;
 }
 
 .primary-heading {
@@ -38,7 +39,7 @@
   margin: 0 0.8rem;
   font-family: inherit;
   color: inherit;
-  /* border: none; */
+  border: 1px solid #333;
   border-radius: 9px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
@@ -47,6 +48,10 @@
   max-width: 5rem;
   text-align: right;
   padding-right: 0.2rem;
+}
+
+.bill-input {
+  max-width: 8rem !important;
 }
 
 .recommendation-title {
@@ -59,20 +64,20 @@
   line-height: 1.2;
   /* border: 1px solid #333; */
   border-radius: 9px;
-  background-color: #d0ebff;
+  background-color: #8ce99a;
   box-shadow: 0 0.8rem 1.2rem rgba(0, 0, 0, 0.075);
 }
 
 .active-result {
   display: inline-block;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 2rem;
   border-bottom: 5px double #333;
 }
 
 .btn {
-  margin-top: 1.6rem;
-  background-color: #74c0fc;
+  margin-top: 2.4rem;
+  background-color: #51cf66;
   font-size: 2.4rem;
   font-weight: 500;
   padding: 0.4rem 3.2rem;
@@ -82,9 +87,26 @@
 
 .btn:hover {
   cursor: pointer;
-  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.3);
 }
 
 .btn:active {
   box-shadow: none;
+}
+
+.copyright-container {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  bottom: 0.4rem;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35rem;
+}
+
+.copyright-text {
+  font-size: 1.2rem;
+  color: #fff;
 }
