--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@
   border-bottom: 5px double #333;
 }
 
+.active-tip {
+  font-weight: 400;
+}
+
 .btn {
   margin-top: 2.4rem;
   background-color: #51cf66;
